--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -74,8 +74,7 @@ main > article{
     width: 300px;
     padding: 20px;
     margin: auto;
-    background-color: var(--color4);
-    border: 1px solid var(--color3);
+    background-color: var(--color3);
     border-radius: 20px;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.705);
 }
@@ -95,7 +94,7 @@ main > article > p{
 .main-button{
     width: 100%;
     margin: auto;
-    padding: 40px 0px;
+    padding: 60px 0px;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -105,10 +104,10 @@ main > article > p{
 }
 .main-button > button{
     padding: 10px;
-    background-color: var(--color4);
+    background-color: var(--color3);
     font: 500 normal 1em var(--font-general);
     color: var(--color1);
-    border: 1px solid var(--color3);
+    border:  none;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.753);
 }
