--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -103,7 +103,7 @@ main > article > p{
     gap: 10px;
 }
 .main-button > button{
-    padding: 10px;
+    padding: 13px;
     background-color: var(--color3);
     font: 500 normal 1em var(--font-general);
     color: var(--color1);
@@ -121,6 +121,7 @@ main > article > p{
 
 footer{
     padding: 10px;
+    align-self: self-start;
 }
 footer > a{
     display: flex;
