--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -22,10 +22,11 @@
 }
 
 :root{
-    --color1: #dfe4eb;
-    --color2: #8a959a;
-    --color3: #293e47;
-    --color4: #031119;
+    --color1: #FFFBFF;
+    --color2: #F7F06D;
+    --color3: #00A878;
+    --color4: #214E34;
+    --color5: #00241B;
 
     --font-main: 'Bebas Neue', cursive;
     --font-general: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -36,4 +37,62 @@
     padding: 0px;
     box-sizing: border-box;
     transition: all .3s ease;
+}
+
+
+
+header{
+    height: 300px;
+    background-color: var(--color5);
+    background-image: url(../image/background_horizontal.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.644);
+}
+
+.header-fixo{
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+}
+.header-fixo > a{
+    width: fit-content;
+    padding: 2px 10px;
+    background-color: var(--color1);
+    font: normal normal 1.3em var(--font-main);
+    color: var(--color5);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.308);
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.header-menu{
+    position: relative;
+    height: 28px;
+    width: 28px;
+    padding: 3px;
+    justify-self: end;
+    background-color: var(--color1);
+    border-radius: 5px;
+}
+.header-menu > div{
+    position: absolute;
+    width: 22px;
+    height: 3px;
+    background-color: var(--color5);
+    border-radius: 5px;
+}
+.menu-barra1{
+    top: 5px;
+}
+.menu-barra2{
+    top: 13px;
+}
+.menu-barra3{
+    top: 21px;
 }
