--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -2,7 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-
 @keyframes business-symbol {
     10%{
         height: 0px;
@@ -39,10 +38,14 @@
     transition: all .3s ease;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 
 
 header{
-    height: 300px;
+    height: 350px;
     background-color: var(--color5);
     background-image: url(../image/background_horizontal.jpg);
     background-position: center center;
@@ -55,34 +58,32 @@ header{
     width: 100%;
     position: fixed;
     top: 0px;
-    padding: 10px;
+    padding: 6px 10px;
     display: grid;
     grid-template-columns: auto auto;
     align-items: center;
+    background-color: var(--color1);
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.644);
 }
 .header-fixo > a{
     width: fit-content;
     padding: 2px 10px;
-    background-color: var(--color1);
     font: normal normal 1.3em var(--font-main);
     color: var(--color5);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.308);
     text-decoration: none;
-    border-radius: 5px;
 }
 
 .header-menu{
+    cursor: pointer;
     position: relative;
     height: 28px;
     width: 28px;
-    padding: 3px;
     justify-self: end;
-    background-color: var(--color1);
-    border-radius: 5px;
 }
 .header-menu > div{
     position: absolute;
-    width: 22px;
+    width: 28px;
     height: 3px;
     background-color: var(--color5);
     border-radius: 5px;
@@ -95,4 +96,56 @@ header{
 }
 .menu-barra3{
     top: 21px;
+}
+
+
+main{
+    margin: auto;
+    max-width: 800px;
+}
+
+main > article{
+    padding: 50px 15px;
+    text-align: center;
+}
+main > article > h1{
+    padding: 10px;
+    font: 700 normal 1.5em var(--font-general);
+}
+main > article > p{
+    padding: 5px;
+    font: normal normal 1em var(--font-general);
+}
+main > article > a{
+    width: fit-content;
+    margin: 15px auto;
+    padding: 10px 15px;
+    display: block;
+    background-color: var(--color3);
+    font: 600 normal 1em var(--font-general);
+    color: var(--color1);
+    text-decoration: none;
+    border-radius: 5px;
+    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.37);
+}
+
+main > section{
+    position: relative;
+    margin: 20px 0px;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    justify-items: center;
+    background-color: var(--color1);
+}
+main > section::before{
+    content: "";
+    z-index: -1;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-color: var(--color5);
+}
+main > section > img{
+    width: 200px;
 }
