--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -62,30 +62,6 @@ header{
     text-decoration: none;
 }
 
-.header-menu{
-    cursor: pointer;
-    position: relative;
-    height: 28px;
-    width: 28px;
-    justify-self: end;
-}
-.header-menu > div{
-    position: absolute;
-    width: 28px;
-    height: 3px;
-    background-color: var(--color5);
-    border-radius: 5px;
-}
-.menu-barra1{
-    top: 5px;
-}
-.menu-barra2{
-    top: 13px;
-}
-.menu-barra3{
-    top: 21px;
-}
-
 
 
 
@@ -135,8 +111,8 @@ main > section{
     justify-items: center;
 }
 main > section > p{
-    padding: 15px;
-    font: 600 normal 1em var(--font-general);
+    padding: 10px;
+    font: 600 normal 0.9em var(--font-general);
     color: var(--color1);
 }
 
@@ -158,74 +134,6 @@ footer > a:active{
     color: var(--color2);
     transition: all .1s ease;
 }
-
-
-
-
-
-
-/*Layout background img*/
-main > section > img{
-    width: 200px;
-    transform: translate(10%);
-}
-.main-section-background-animation{
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: var(--color1);
-}
-.design-element1{
-    position: absolute;
-    top: 20px;
-    left: -150px;
-    width: 100%;
-    height: 100%;
-    background-color: var(--color4);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.507);
-    transform: rotate(-45deg);
-    animation: background-animation 20s infinite;
-}
-.design-element2{
-    position: absolute;
-    left: -150px;
-    width: 100%;
-    height: 100%;
-    background-color: var(--color5);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.507);
-    transform: rotate(-45deg);
-}
-.design-element3{
-    position: absolute;
-    top: 0px;
-    left: 90px;
-    width: 100px;
-    height: 6px;
-    background-color: var(--color1);
-    border-radius: 5px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.507);
-    transform: rotate(-45deg);
-}
-.design-element4{
-    position: absolute;
-    top: 30px;
-    left: -30px;
-    width: 100px;
-    height: 6px;
-    background-color: var(--color1);
-    border-radius: 5px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.507);
-    transform: rotate(-45deg);
-}
-.design-element5{
-    position: absolute;
-    top: 200px;
-    left: -20px;
-    width: 100px;
-    height: 6px;
-    background-color: var(--color1);
-    border-radius: 5px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.507);
-    transform: rotate(-45deg);
-}
+ img{
+    display: none;
+ }
