versao mobile index completa

--- a/sites/gestor-financeiro/style/mobile-tools.css
+++ b/sites/gestor-financeiro/style/mobile-tools.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+
+
+/*Menu*/
 .header-menu{
     cursor: pointer;
     position: relative;
@@ -32,19 +35,25 @@
     bottom: -95px;
     width: 100vw;
 }
-.menu-tools > button{
+.menu-tools > a{
     position: absolute;
     left: 50%;
     width: 130px;
     padding: 20px 0px;
-    background-color: var(--color3);
+    background-color: var(--color5);
     font: 600 normal .9em var(--font-general);
     color: var(--color1);
+    text-align: center;
+    text-decoration: none;
     border: none;
     border-radius: 5px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
     transform: rotate(-90deg);
     translate: -50%;
+}
+.menu-tools > a:active{
+    background-color: var(--color4);
+    transition: all .1s ease;
 }
 .menu-tools > .calculadora{
     z-index: 1;
