--- a/sites/gestor-financeiro/style/mobile-tools.css
+++ b/sites/gestor-financeiro/style/mobile-tools.css
@@ -78,6 +78,7 @@
     gap: 5px;
 }
 .calculadora > p{
+    overflow: auto;
     width: 100%;
     padding: 15px;
     grid-column-start: 1;
@@ -87,6 +88,10 @@
     border: 2px solid var(--color5);
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+}
+.calculadora > p::-webkit-scrollbar{
+    width: 5px;
+    height: 5px;
 }
 .calculadora > button{
     cursor: pointer;
