--- a/sites/gestor-financeiro/style/mobile.css
+++ b/sites/gestor-financeiro/style/mobile.css
@@ -7,6 +7,12 @@
     height: 0px;
 }
 
+::-webkit-scrollbar-thumb{
+    background-color: var(--color1);
+    border: 2px solid var(--color5);
+    border-radius: 5px;
+}
+
 :root{
     --color1: #FFFBFF;
     --color2: #F7F06D;
