--- a/sites/gestor-financeiro/style/mobile-tools.css
+++ b/sites/gestor-financeiro/style/mobile-tools.css
@@ -106,3 +106,75 @@
     background-color: var(--color2);
     transition: all .1s ease;
 }
+
+
+
+
+
+form{
+    width: 300px;
+    margin: 10px auto 100px auto;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    row-gap: 10px;
+}
+
+form > div{
+    padding: 3px;
+    display: grid;
+    grid-template-columns: 1.5fr 8fr 2fr;
+    align-items: center;
+    justify-items: center;
+    column-gap: 3px;
+    background-color: var(--color5);
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+form > div > label{
+    font: 700 normal 1em var(--font-general);
+    color: var(--color1);
+}
+form > div > input{
+    width: 100%;
+    padding: 10px;
+    font: normal normal 1em var(--font-general);
+    color: var(--color5);
+    border: none;
+    border-radius: 8px;
+}
+form > div > input:focus{
+    outline: none;
+    background-color: var(--color2);
+}
+form > div > input::-webkit-inner-spin-button{
+    display: none;
+}
+
+form > div > div{
+    cursor: pointer;
+    padding: 10px;
+    background-color: var(--color1);
+    font: 600 normal 1em var(--font-general);
+    color: var(--color5);
+    border: none;
+    border-radius: 8px;
+}
+form > div > div:active{
+    background-color: var(--color2);
+    transition: all .1s ease;
+}
+
+form > input[type="submit"]{
+    cursor: pointer;
+    background-color: var(--color3);
+    font: 700 normal 1em var(--font-general);
+    color: var(--color1);
+    border: none;
+    border-radius: 10px;
+    box-shadow:  2px 2px 6px rgba(0, 0, 0, 0.4);
+}
+form > input[type="submit"]:active{
+    background-color: var(--color2);
+    transition: all .1s ease;
+}
