--- a/sites/gestor-financeiro/style/formulario.css
+++ b/sites/gestor-financeiro/style/formulario.css
@@ -31,6 +31,7 @@ header{
     text-align: justify;
 }
 #alerta button{
+    cursor: pointer;
     padding: 8px;
     margin: 20px auto;
     background-color: red;
@@ -46,7 +47,83 @@ header{
     transition: all .1s ease;
 }
 
-form{
+main > form{
     /*display: none;
     transform: scale(0);*/
+}
+
+main > form > fieldset{
+    padding: 15px;
+    margin-bottom: 70px;
+    border: none;
+    color: var(--color5);
+}
+
+main > form > fieldset > legend{
+    font: 500 normal 1.4em var(--font-main);
+}
+
+main > form > fieldset > section > h2{
+    margin: 15px 0px 5px 0px;
+    font: 700 normal 1.1em var(--font-general);
+}
+
+main > form > fieldset > section > label{
+    cursor: pointer;
+    padding-right: 5px;
+    font: 500 normal .95em var(--font-general);
+}
+
+main > form > fieldset > section > input[type="number"]{
+    cursor: pointer;
+    width: 100px;
+    margin-bottom: 5px;
+    padding: 5px;
+    font: 600 normal .9em var(--font-general);
+    border-radius: 10px;
+    border: 1px solid black;
+}
+main > form > fieldset > section > input[type="number"]::-webkit-inner-spin-button,
+main > form > fieldset > section > input[type="number"]::-webkit-outer-spin-button{
+    display: none;
+}
+main > form > fieldset > section > input[type="number"]:focus{
+    color: var(--color3); 
+    border: 1px solid var(--color3);
+    outline: none;
+    transform: scale(1.1);
+}
+
+main > form > fieldset > section > input[type="radio"]{
+    display: none;
+}
+main > form > fieldset > section > input[type="radio"]:checked + label{
+    color: var(--color3);
+    text-decoration: line-through;
+}
+
+main > form > fieldset > section > input[type="checkbox"]{
+    display: none;
+}
+main > form > fieldset > section > input[type="checkbox"]:checked + label{
+    color: var(--color3);
+    text-decoration: line-through;
+}
+
+main > form button{
+    cursor: pointer;
+    margin: 0px auto 100px auto;
+    padding: 15px 23px;
+    display: block;
+    background-color: var(--color3);
+    font: 600 normal 1em var(--font-general);
+    color: var(--color1);
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+main > form button:active{
+    background-color: var(--color2);
+    color: var(--color3);
+    transition: all .1s ease;
 }
