--- a/sites/gestor-financeiro/style/formulario.css
+++ b/sites/gestor-financeiro/style/formulario.css
@@ -121,3 +121,43 @@ main > form button:active{
     color: var(--color3);
     transition: all .1s ease;
 }
+
+
+
+
+
+main > form > output{
+    padding: 15px;
+    display: block;
+    background-color: var(--color5);
+    color: var(--color1);
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.5);
+}
+
+main > form > output > section > h1{
+    padding: 20px 0px 10px 0px;
+    font: normal normal 1.5em var(--font-main);
+    text-align: center;
+}
+main > form > output > section > p{
+    font: normal normal 1em var(--font-general);
+    text-indent: 1em;
+}
+
+#grafico{
+    margin: auto;
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: end;
+    justify-content: center;
+    gap: 5px;
+    background-color: var(--color1);
+}
+#grafico > div{
+    height: 1%;
+    width: 20%;
+    background-color: var(--color3);
+}
