--- a/sites/gestor-financeiro/style/formulario.css
+++ b/sites/gestor-financeiro/style/formulario.css
@@ -144,20 +144,27 @@ main > form > output > section > p{
     text-indent: 1em;
 }
 
-#grafico{
+main > form > output > section > div{
     margin: auto;
     width: 100%;
-    height: 150px;
     padding: 10px;
     display: flex;
     flex-flow: row nowrap;
     align-items: end;
     justify-content: center;
     gap: 5px;
+}
+main > form > output > section > div > div{
+    height: 1%;
+    width: 20%;
+    font: normal normal .5em var(--font-general);
+    text-align: center;
+}
+#grafico{
+    height: 150px;
     background-color: var(--color1);
 }
 #grafico > div{
-    height: 1%;
-    width: 20%;
     background-color: var(--color3);
+    color: black;
 }
